# matlab_data_extractor

./: README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
sources/matlab_saved_workspaces/: matlab_saved_ws_1.mat  matlab_saved_ws_2.mat
src/matlab_extractor/: converter.py  extractor.py
tests/: test_extractor.py
