[metadata]
name = vec_calculator
description = matlab data extractor
author = Maxim Mushz
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    vec_calculator
install_requires =
    numpy>=1.2
    pandas>=1.4
    python-dateutil>=2.8
    pytz>=2021
    scipy>=1.7
    six>=1.16.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
vec_calculator = py.typed

[flake8]
max-line-length = 160